[package]
name = "cargo-git-semver"
version = "0.6.0"
license = "MIT OR Apache-2.0"
description = "automatically update package version from git tags"
repository = "https://github.com/btel/cargo-git-semver"
readme = "README.md"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clap-cargo = "0.14"
env_logger = "0.10.1"
git2 = { version = "0.18.1", default-features = false }
log = "0.4.20"
regex = "1.9.6"
semver = "1.0.19"
tempfile = "3.9.0"
toml = { version = "0.8.2", features = ["preserve_order"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
